[project]
name = "image-toolkit"
version = "0.1.0"
description = "A private, offline first image editor built with streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "streamlit>=1.54.0",
    "streamlit-cropper>=0.3.1",
]
